--- a/src/Finances.WinClient/ResourceDictionaries/Styles.xaml
+++ b/src/Finances.WinClient/ResourceDictionaries/Styles.xaml
@@ -86,7 +86,11 @@
 
     <Style TargetType="{x:Type Button}">
         <Style.Resources>
-            <CornerRadius x:Key="ButtonCornerRadius" BottomLeft="3" BottomRight="3" TopLeft="3" TopRight="3"/>
+            <CornerRadius x:Key="ButtonCornerRadius" 
+                        BottomLeft="{StaticResource AppCornerRadius}"
+                        BottomRight="{StaticResource AppCornerRadius}" 
+                        TopLeft="{StaticResource AppCornerRadius}" 
+                        TopRight="{StaticResource AppCornerRadius}"/>
 
             <SolidColorBrush x:Key="ButtonBaseBrush" Color="{StaticResource AppFeintColor}"></SolidColorBrush>
             <SolidColorBrush x:Key="ButtonMouseOverBrush" Color="{StaticResource AppPaleColor}"></SolidColorBrush>
@@ -109,7 +113,7 @@
         <Setter Property="Foreground" Value="Black" />
         <Setter Property="Control.HorizontalContentAlignment" Value="Center" />
         <Setter Property="Control.VerticalContentAlignment" Value="Center" />
-        <Setter Property="Control.Padding" Value="10,3" />
+        <Setter Property="Control.Padding" Value="10,1,10,2" />
         <Setter Property="FrameworkElement.FocusVisualStyle">
             <Setter.Value>
                 <Style TargetType="IFrameworkInputElement">
@@ -119,7 +123,13 @@
                     <Setter Property="Control.Template">
                         <Setter.Value>
                             <ControlTemplate>
-                                <Rectangle Stroke="{StaticResource AppFeintBrush}" StrokeThickness="1" StrokeDashArray="1 2" Margin="3,3,3,3" SnapsToDevicePixels="True" />
+                                <Rectangle Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" 
+                                            StrokeThickness="1" 
+                                            StrokeDashArray="1 2" 
+                                            Margin="2,2,2,2"
+                                            RadiusX="{StaticResource AppCornerRadius}"
+                                            RadiusY="{StaticResource AppCornerRadius}"
+                                            SnapsToDevicePixels="True" />
                             </ControlTemplate>
                         </Setter.Value>
                     </Setter>
@@ -191,6 +201,9 @@
 
 
     <Style TargetType="{x:Type ComboBox}">
+        <Style.Resources>
+            <SolidColorBrush x:Key="PopupBackground" Color="{Binding Source={StaticResource AppControlBackgoundColor}}"/>
+        </Style.Resources>
         <Style.Triggers>
             <Trigger Property="IsKeyboardFocusWithin" Value="true">
                 <Setter Property="BorderBrush" Value="{StaticResource AppDarkBrush}" />
@@ -212,8 +225,8 @@
                                 <ControlTemplate>
                                     <Grid>
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="5*" />
                                             <ColumnDefinition Width="*" />
+                                            <ColumnDefinition Width="{Binding ActualHeight, ElementName=ContentSite}" />
                                         </Grid.ColumnDefinitions>
                                         <Border x:Name="Border"  Grid.ColumnSpan="2" CornerRadius="3" Background="Beige" BorderBrush="Black" BorderThickness="1" />
                                         <Border Grid.Column="0" CornerRadius="3,0,0,3"  Margin="1"  Background="{TemplateBinding Background}"  BorderBrush="Black" BorderThickness="0,0,1,0" />
@@ -231,9 +244,9 @@
                         </ToggleButton>
                         <ContentPresenter Name="ContentSite" IsHitTestVisible="False"  Content="{TemplateBinding SelectionBoxItem}" ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}" ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}" Margin="3"  />
                         <TextBox x:Name="PART_EditableTextBox" Visibility="Hidden" IsReadOnly="{TemplateBinding IsReadOnly}"/>
-                        <Popup Name="Popup" Placement="Bottom" IsOpen="{TemplateBinding IsDropDownOpen}" AllowsTransparency="True"  Focusable="False" PopupAnimation="Slide">
+                        <Popup Name="Popup" Placement="Bottom" IsOpen="{TemplateBinding IsDropDownOpen}" AllowsTransparency="False"  Focusable="False" PopupAnimation="Slide">
                             <Grid  Name="DropDown" SnapsToDevicePixels="True" MinWidth="{TemplateBinding ActualWidth}" MaxHeight="{TemplateBinding MaxDropDownHeight}">
-                                <Border x:Name="DropDownBorder" Background="{TemplateBinding Background}" BorderThickness="1" BorderBrush="Black" />
+                                <Border x:Name="DropDownBorder" Background="{DynamicResource PopupBackground}" BorderThickness="1" BorderBrush="Black" />
                                 <ScrollViewer SnapsToDevicePixels="True">
                                     <StackPanel IsItemsHost="True" />
                                 </ScrollViewer>
