--- a/src/Finances.WinClient/Views/BalanceDateEditorView.xaml
+++ b/src/Finances.WinClient/Views/BalanceDateEditorView.xaml
@@ -46,23 +46,22 @@
 
             <Style TargetType="Label">
                 <Setter Property="VerticalContentAlignment" Value="Center" />
-                <Setter Property="Height" Value="25" />
+                <!--<Setter Property="Height" Value="25" />-->
             </Style>
-            <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}" >
+            <!--<Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}" >
                 <Setter Property="Background" Value="Beige" />
                 <Setter Property="HorizontalAlignment" Value="Left" />
                 <Setter Property="Validation.ErrorTemplate" Value="{StaticResource validationTemplate}" />
-            </Style>
-            <Style TargetType="ComboBox" BasedOn="{StaticResource {x:Type ComboBox}}">
+            </Style>-->
+            <!--<Style TargetType="ComboBox" BasedOn="{StaticResource {x:Type ComboBox}}">
                 <Setter Property="Background" Value="Beige" />
                 <Setter Property="Height" Value="25" />
                 <Setter Property="Width" Value="350" />
                 <Setter Property="HorizontalAlignment" Value="Left" />
                 <Setter Property="VerticalContentAlignment" Value="Center" />
                 <Setter Property="Validation.ErrorTemplate" Value="{StaticResource validationTemplate}" />
-            </Style>
+            </Style>-->
             <Style TargetType="DatePicker" >
-                <!--<Setter Property="Background" Value="Beige" />-->
                 <Setter Property="Height" Value="25" />
                 <Setter Property="HorizontalAlignment" Value="Left" />
                 <Setter Property="VerticalContentAlignment" Value="Center" />
