--- a/src/Finances.WinClient/Views/BankEditorView.xaml
+++ b/src/Finances.WinClient/Views/BankEditorView.xaml
@@ -44,27 +44,27 @@
                 <Style TargetType="Label">
                     <Setter Property="Grid.Column" Value="0" />
                     <!--<Setter Property="Background" Value="Beige" />-->
-                    <Setter Property="VerticalContentAlignment" Value="Center" />
+                    <!--<Setter Property="VerticalContentAlignment" Value="Center" />-->
                     <!--<Setter Property="Margin" Value="5,0" />-->
-                    <Setter Property="Height" Value="25" />
+                    <Setter Property="Height" Value="30" />
                 </Style>
                 <Style BasedOn="{StaticResource {x:Type TextBox}}" TargetType="{x:Type TextBox}">
                     <Setter Property="Grid.Column" Value="1" />
-                    <Setter Property="Background" Value="Beige" />
+                    <!--<Setter Property="Background" Value="Beige" />-->
                     <Setter Property="Height" Value="25" />
                     <Setter Property="Width" Value="300" />
-                    <Setter Property="HorizontalAlignment" Value="Left" />
+                    <!--<Setter Property="HorizontalAlignment" Value="Left" />
                     <Setter Property="VerticalContentAlignment" Value="Center" />
-                    <Setter Property="Validation.ErrorTemplate" Value="{StaticResource validationTemplate}" />
+                    <Setter Property="Validation.ErrorTemplate" Value="{StaticResource validationTemplate}" />-->
                 </Style>
-                <Style TargetType="DatePicker">
+                <!--<Style TargetType="DatePicker">
                     <Setter Property="Grid.Column" Value="1" />
                     <Setter Property="Background" Value="Beige" />
                     <Setter Property="Height" Value="25" />
                     <Setter Property="Width" Value="250" />
                     <Setter Property="HorizontalAlignment" Value="Left" />
                     <Setter Property="VerticalContentAlignment" Value="Center" />
-                </Style>
+                </Style>-->
             </Grid.Resources>
 
             <Label      Content="Bank Name" 
